
_____________________________________________________________________________________________________


                                       CFDWARP CHANGELOG

_____________________________________________________________________________________________________


2020 JAN 01a
  * in model/emfield/_Epotential/emfield.c
    - in find_post_variable_value_emfield(), fixed a problem related to not finding Ve 
      at the near boundary nodes
    

2019 DEC 29a
  * in model/emfield/_Epotential/emfield.c
    - in find_post_variable_value_emfield(), replaced find_Vk() by ind_Vk_from_Vk_at_interfaces()
  * in model/fluid/_Navier-Stokes/fluid_post.c
    - added kappa to post variables
  * in model/fluid/_Navier-Stokes/fluid.hh
    - increased totalpostvarfluid to (7+nd+ns)
  * in model/share/emfield_share.c
    - added find_Vk_from_Vk_at_interfaces() and find_Jk_from_Jk_at_interfaces()
    

2019 DEC 27b
  * in model/fluid/_*_plasma/fluid_source.c
    - in find_Se(), changed the electron energy source term back to to 19dec18a version 


2019 DEC 27a
  * in model/fluid/_*_plasma/fluid_bdry.c
    - in update_bdry_wall(), added a clipping to ensure that the electron temperature at the wall
      never falls below the wall temperature
  * in model/fluid/_*_plasma/fluid_source.c
    - in find_Se(), changed the electron energy source term to E dot Je for testing 
       

2019 DEC 24a
  * in bin/thermal_sheath.wrp
    - added clipping of Te within Cycle() module in the early stages of convergence
  * renamed model/chem/_Air_Plasma_12s_59r_Dunn-Kang-Macheret to 
    model/chem/_Air_Plasma_12s_42r_Dunn-Kang-Macheret
  * in model/chem/_Air_Plasma_12s_42r_Dunn-Kang-Macheret/chem.c
    - got rid of redundant reactions
  * in model/chem/_Air_Plasma_12s_42r_Dunn-Kang-Macheret
    - added doc
    

2019 DEC 18a
  * in cycle/*/cycle.c
    - in runtime_actions_cycle_specific(), added gl->PRECONDITIONER!=PRECON_LOCALTIMESTEP2
  * in cycle/share/cycle_share.c