@@ -1,5 +1,5 @@
 #/usr/bin/sh
 
-gcc -c -Wall -O4 -I../../../../lib/include test.c 
-gcc test.o -lm -L../../../../lib -lexm -o test
-./test
+gcc -c -Wall -O4 -I../../../../lib/include EoverN.c 
+gcc EoverN.o -lm -L../../../../lib -lexm -o EoverN
+./EoverN
